--- a/news.html
+++ b/news.html
@@ -147,7 +147,7 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-background.png');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">Latest News</h1>
@@ -166,7 +166,7 @@
                                 <span class="text-sm text-gray-500">September 1, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Embassy Celebrates Nigerian Independence Day</h2>
                                 <p class="text-gray-600 mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary have been announced...</p>
-                                <a href="#" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
+                                <a href="news-article-1.html" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
                             </div>
                         </div>
                         <!-- News Card 2 -->
@@ -176,7 +176,7 @@
                                 <span class="text-sm text-gray-500">August 25, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">New Consular Appointment System Launched</h2>
                                 <p class="text-gray-600 mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency and reduce waiting times...</p>
-                                <a href="#" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
+                                <a href="news-article-1.html" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
                             </div>
                         </div>
                         <!-- News Card 3 -->
@@ -186,7 +186,7 @@
                                 <span class="text-sm text-gray-500">August 15, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Nigeria-Czech Business Forum Announced</h2>
                                 <p class="text-gray-600 mb-4">The upcoming forum will aim to boost trade and investment between Nigeria and the Czech Republic, focusing on technology and agriculture...</p>
-                                <a href="#" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
+                                <a href="news-article-1.html" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
                             </div>
                         </div>
                         <!-- Add more news cards as needed -->
