--- a/news-article-1.html
+++ b/news-article-1.html
@@ -147,7 +147,7 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event1.jpg');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event1.png');"></div>
             <div class="absolute inset-0 bg-black opacity-60"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">Embassy Celebrates Nigerian Independence Day</h1>
