--- a/our-team.html
+++ b/our-team.html
@@ -18,7 +18,7 @@
             border-bottom: 4px solid #008751;
         }
         .dropdown .dropdown-content { display: none; }
-        .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
+        .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 50; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
         .dropdown-content a:hover { background-color: #f1f1f1; }
         .main-content-bg {
@@ -158,23 +158,23 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
+                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
                         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
                             <!-- Ambassador Profile -->
-                            <div class="team-card text-center">
+                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
                                 <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
                                 <h3 class="text-xl font-bold font-heading nigeria-green">H.E. Dr. Maureen Tamuno</h3>
                                 <p class="text-gray-500 font-semibold">Ambassador / Head of Mission</p>
                             </div>
                             <!-- Deputy Profile -->
-                            <div class="team-card text-center">
+                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
                                 <img src="images/team-member-1.jpg" alt="Deputy Head of Mission" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
                                 <h3 class="text-xl font-bold font-heading nigeria-green">Mr. Adekunle Adeyemi</h3>
                                 <p class="text-gray-500 font-semibold">Deputy Head of Mission</p>
                             </div>
                             <!-- Consular Head Profile -->
-                            <div class="team-card text-center">
+                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
                                 <img src="images/team-member-2.jpg" alt="Head of Consular Section" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
                                 <h3 class="text-xl font-bold font-heading nigeria-green">Mrs. Chinyere Okoro</h3>
                                 <p class="text-gray-500 font-semibold">Minister / Head of Consular Section</p>
