--- a/news-article-1.html
+++ b/news-article-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample News Article | Embassy of Nigeria, Prague</title>
+    <title>Embassy Celebrates Nigerian Independence Day | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
             border-bottom: 4px solid #008751;
         }
         .dropdown .dropdown-content { display: none; }
-        .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
+        .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 50; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
         .dropdown-content a:hover { background-color: #f1f1f1; }
         .main-content-bg {
@@ -67,7 +67,7 @@
     </a>
 
     <!-- Header -->
-    <header class="bg-white shadow-md sticky top-0 w-full z-10">
+    <header class="bg-white shadow-md sticky top-0 w-full z-20">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="index.html" class="flex items-center space-x-3">
@@ -270,3 +270,4 @@
     </script>
 </body>
 </html>
+
