--- a/cda.html
+++ b/cda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambassador's Welcome | Embassy of Nigeria, Prague</title>
+    <title>Charge D' Affairs' Welcome | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +88,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="ambassador.html">Ambassador's Welcome</a>
+                            <a href="cda.html">Charge D' Affairs' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -147,10 +147,10 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/ambassador-background.png');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/cda-background.png');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">Ambassador's Welcome</h1>
+                <h1 class="text-4xl font-bold font-heading">Charge D' Affairs' Welcome</h1>
             </div>
         </section>
 
@@ -161,8 +161,8 @@
                     <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap md:flex-nowrap items-start">
                             <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
-                                <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">H.E. Dr. Maureen Tamuno</h3>
+                                <img src="images/charge-daffairs.jpg" alt="Charge D' Affairs A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA.AI Dr. Maureen Tamuno</h3>
                                 <p class="text-gray-600">Ambassador of the Federal Republic of Nigeria to the Czech Republic</p>
                             </div>
                             <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
