--- a/cda.html
+++ b/cda.html
@@ -162,8 +162,8 @@
                         <div class="flex flex-wrap md:flex-nowrap items-start">
                             <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
                                 <img src="images/charge-daffairs.jpg" alt="Charge D' Affairs A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA.AI Dr. Maureen Tamuno</h3>
-                                <p class="text-gray-600">Ambassador of the Federal Republic of Nigeria to the Czech Republic</p>
+                                <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA A.I Mrs. Sarah Bukar-Godwin</h3>
+                                <p class="text-gray-600">Charge D' Affairs' A.I of the Federal Republic of Nigeria to the Czech Republic</p>
                             </div>
                             <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
                                 <h2 class="font-heading text-3xl nigeria-green">A Warm Welcome</h2>
