--- a/cda.html
+++ b/cda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charge D' Affair's Welcome | Embassy of Nigeria, Prague</title>
+    <title>Charge D' Affairs' Welcome | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,7 +91,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Ambassador's Welcome</a>
+                            <a href="cda.html">Charge D' Affairs' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -153,7 +153,7 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/cda-background.png');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">Charge D' Affair's Welcome</h1>
+                <h1 class="text-4xl font-bold font-heading">Charge D' Affairs' Welcome</h1>
             </div>
         </section>
 
