--- a/cda.html
+++ b/cda.html
@@ -166,9 +166,9 @@
                             <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
                                 <div class="flex flex-wrap md:flex-nowrap items-start">
                                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
-                                        <img src="images/charge-daffairs.jpg" alt="Charge D' Affairs A.I. Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                        <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA A.I. Mrs. Sarah Bukar-Godwin</h3>
-                                        <p class="text-gray-600">Charge D' Affairs of the Federal Republic of Nigeria to the Czech Republic</p>
+                                        <img src="images/charge-daffairs.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                        <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA A.I Mrs. Mrs. Sarah Bukar-Godwin</h3>
+                                        <p class="text-gray-600">Charge D' Affairs' of the Federal Republic of Nigeria to the Czech Republic</p>
                                     </div>
                                     <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
                                         <h2 class="font-heading text-3xl nigeria-green">A Warm Welcome</h2>
@@ -185,13 +185,6 @@
                         <!-- Sidebar -->
                         <aside class="lg:col-span-1">
                             <div class="bg-white p-6 rounded-lg shadow-lg">
-                                <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Search</h3>
-                                <div class="flex">
-                                    <input type="text" placeholder="Search this site..." class="w-full border-gray-300 rounded-l-md focus:ring-nigeria-green focus:border-nigeria-green">
-                                    <button class="nigeria-green-bg text-white px-4 rounded-r-md hover:opacity-90"><i class="fas fa-search"></i></button>
-                                </div>
-                            </div>
-                            <div class="bg-white p-6 rounded-lg shadow-lg mt-8">
                                 <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Useful Links</h3>
                                 <ul class="space-y-3 text-gray-700">
                                     <li><a href="visas.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-passport mr-2"></i>Apply for a Nigerian Visa</a></li>
