--- a/our-team.html
+++ b/our-team.html
@@ -31,40 +31,43 @@
             transform: translateY(-8px);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
-        .translate-button {
+        .translate-buttons {
             position: fixed;
             top: 180px; 
             right: 20px;
             z-index: 1000;
+        }
+        .translate-buttons button {
             background-color: white;
-            color: #333;
-            padding: 10px 15px;
-            border-radius: 50px;
+            padding: 8px;
+            border-radius: 50%;
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            font-size: 14px;
-            font-weight: 600;
             transition: transform 0.3s ease;
         }
-        .translate-button:hover {
-            transform: scale(1.05);
+        .translate-buttons button:hover {
+            transform: scale(1.1);
         }
-        .translate-button img {
-            width: 24px;
-            height: 24px;
-            margin-right: 8px;
+        .translate-buttons img {
+            width: 28px;
+            height: 28px;
         }
+        /* Hide the default Google Translate bar */
+        .skiptranslate { display: none !important; }
+        body { top: 0 !important; }
     </style>
 </head>
 <body class="bg-gray-100">
 
-    <!-- Translate Button -->
-     <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
-        <img src="https://flagcdn.com/w40/cz.png" alt="Czech Flag">
-        <span>Česky</span>
-    </a>
+    <!-- Translate Buttons -->
+     <div class="translate-buttons flex flex-col space-y-2">
+        <button onclick="translatePage('en')" title="Translate to English">
+            <img src="https://flagcdn.com/w40/gb.png" alt="English Flag">
+        </button>
+        <button onclick="translatePage('cs')" title="Translate to Czech">
+            <img src="https://flagcdn.com/w40/cz.png" alt="Czech Flag">
+        </button>
+    </div>
+    <div id="google_translate_element" style="display:none;"></div>
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-20">
@@ -158,28 +161,44 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
-                        <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
-                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
-                            <!-- Ambassador Profile -->
-                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
-                                <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold font-heading nigeria-green">H.E. Dr. Maureen Tamuno</h3>
-                                <p class="text-gray-500 font-semibold">Ambassador / Head of Mission</p>
-                            </div>
-                            <!-- Deputy Profile -->
-                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
-                                <img src="images/team-member-1.jpg" alt="Deputy Head of Mission" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold font-heading nigeria-green">Mr. Adekunle Adeyemi</h3>
-                                <p class="text-gray-500 font-semibold">Deputy Head of Mission</p>
-                            </div>
-                            <!-- Consular Head Profile -->
-                            <div class="team-card text-center p-6 rounded-lg card-lift-effect">
-                                <img src="images/team-member-2.jpg" alt="Head of Consular Section" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold font-heading nigeria-green">Mrs. Chinyere Okoro</h3>
-                                <p class="text-gray-500 font-semibold">Minister / Head of Consular Section</p>
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+                        <div class="lg:col-span-2">
+                             <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
+                                <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
+                                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
+                                    <!-- Ambassador Profile -->
+                                    <div class="team-card text-center p-6 rounded-lg card-lift-effect">
+                                        <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
+                                        <h3 class="text-xl font-bold font-heading nigeria-green">H.E. Dr. Maureen Tamuno</h3>
+                                        <p class="text-gray-500 font-semibold">Ambassador / Head of Mission</p>
+                                    </div>
+                                    <!-- Deputy Profile -->
+                                    <div class="team-card text-center p-6 rounded-lg card-lift-effect">
+                                        <img src="images/team-member-1.jpg" alt="Deputy Head of Mission" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
+                                        <h3 class="text-xl font-bold font-heading nigeria-green">Mr. Adekunle Adeyemi</h3>
+                                        <p class="text-gray-500 font-semibold">Deputy Head of Mission</p>
+                                    </div>
+                                    <!-- Consular Head Profile -->
+                                    <div class="team-card text-center p-6 rounded-lg card-lift-effect">
+                                        <img src="images/team-member-2.jpg" alt="Head of Consular Section" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
+                                        <h3 class="text-xl font-bold font-heading nigeria-green">Mrs. Chinyere Okoro</h3>
+                                        <p class="text-gray-500 font-semibold">Minister / Head of Consular Section</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <!-- Sidebar -->
+                        <aside class="lg:col-span-1">
+                            <div class="bg-white p-6 rounded-lg shadow-lg">
+                                <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Useful Links</h3>
+                                <ul class="space-y-3 text-gray-700">
+                                    <li><a href="visas.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-passport mr-2"></i>Apply for a Nigerian Visa</a></li>
+                                    <li><a href="etc.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-plane-departure mr-2"></i>Emergency Travel Documents</a></li>
+                                    <li><a href="https://www.immigration.gov.ng/" target="_blank" class="hover:text-nigeria-green hover:underline"><i class="fas fa-link mr-2"></i>Nigeria Immigration Service</a></li>
+                                    <li><a href="news.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-calendar-alt mr-2"></i>Public Holidays Schedule</a></li>
+                                </ul>
+                            </div>
+                        </aside>
                     </div>
                 </div>
             </section>
@@ -208,9 +227,27 @@
         </div>
     </footer>
     
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script>
+        // Function to scroll to top on page load/refresh
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+        }
+
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false}, 'google_translate_element');
+        }
+
+        function translatePage(languageCode) {
+            const googleCombo = document.querySelector('.goog-te-combo');
+            if (googleCombo) {
+                googleCombo.value = languageCode;
+                googleCombo.dispatchEvent(new Event('change'));
+            }
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            // JS for menus and translation
+            // JS for menus and live clock
             function updateTime() {
                 const timeEl = document.getElementById('prague-time');
                 if (timeEl) {
@@ -271,14 +308,6 @@
                     mobileMenu.classList.add('hidden');
                 }
             });
-
-            const translateLink = document.getElementById('translate-link');
-            if(translateLink) {
-                const currentPageUrl = window.location.href;
-                const googleTranslateUrl = `https://translate.google.com/translate?sl=en&tl=cs&u=${encodeURIComponent(currentPageUrl)}`;
-                translateLink.href = googleTranslateUrl;
-                translateLink.target = '_blank';
-            }
         });
     </script>
 </body>
